# respond-ai

./: .env.example  .gitignore  AGENTS.md  README.md  docker-compose.yml
apps/api/: Dockerfile  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 146703db33e7_initial_schema.py  9f2c0a1f4d18_add_response_document_tables.py
apps/api/app/: main.py
apps/api/app/ai/: __init__.py  chat.py  embeddings.py  errors.py  factory.py  registry.py  structured.py  usage.py
apps/api/app/core/: auth.py  celery_app.py  client_config.py  config.py  database.py  logging.py
apps/api/app/db/: migration_check.py  migrations_or_init.py  (+1 more)
apps/api/scripts/: run_evals.py  seed_data.py
apps/api/tests/: test_ai_factory.py  test_ai_usage.py  test_app_startup.py  test_ask_drafts_route.py  test_ask_route_enqueue.py  test_async_runtime.py  test_auth_routes.py  test_chunking.py  test_citations.py  test_client_config.py  test_client_config_route.py  test_config.py  test_database_session_config.py  test_draft_history_service.py  test_drafting_revision_constraints.py  test_evaluators.py  test_graph_router.py  test_graph_utils.py  test_health_route.py  test_logging.py  test_migration_check.py  test_nodes_regression.py  test_observability_utils.py  test_planning_service.py  test_prompt_loader.py  test_response_documents_route.py  test_response_documents_service.py  test_review_route_regression.py  test_route_utils.py  test_runtime_database_url.py  test_seed_data_script.py  test_session_service.py  test_sse_workflow_events.py  test_workflow_events_redis.py  test_workflow_tasks.py
(+222 files in other folders)
