[project]
name = "respondai-api"
version = "0.1.0"
description = "RespondAI FastAPI backend"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "sqlalchemy>=2.0.30",
  "alembic>=1.14.0",
  "psycopg[binary]>=3.2.0",
  "pgvector>=0.3.2",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.3.0",
  "openai>=1.52.0",
  "anthropic>=0.49.0",
  "google-generativeai>=0.8.0",
  "langchain-core>=0.3.0",
  "langchain-openai>=0.3.0",
  "langchain-anthropic>=0.3.0",
  "langchain-google-genai>=2.0.0",
  "langgraph>=0.2.40",
  "langgraph-checkpoint-postgres>=2.0.5",
  "celery>=5.4.0",
  "redis>=5.0.0",
  "python-dotenv>=1.0.1",
  "itsdangerous>=2.2.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
